# proxypp

./: .clang-format  .clangd  .gitignore  .prettierignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  commitlint.config.js  package.json  pnpm-lock.yaml  tsconfig.e2e.json  vcpkg.json  vitest.config.ts
.github/workflows/: ci.yml  deploy-docs.yml
app/: main.cpp
cmake/vcpkg-ports/cli11/: portfile.cmake
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/src/: content.config.ts
docs/src/content/docs/: index.mdx
docs/src/content/i18n/: zh-CN.json
e2e/: http-get-chunked.e2e.test.ts  http-get-close-delimited.e2e.test.ts  http-get.e2e.test.ts  http-keep-alive.e2e.test.ts  http-post-chunked.e2e.test.ts  https-get.e2e.test.ts
e2e/fixtures/: express-http-server.ts  fixture-server.types.ts  server-utils.ts  tcp-server.ts
e2e/fixtures/certs/: README.md  localhost.cnf  localhost.crt  localhost.key
e2e/helpers/: http-client.ts  ports.ts  proxy-process.ts  rule-files.ts
examples/rules/: README.md  rules01.json  rules02.json  rules03.json
schemas/: proxypp_rules_schema_v1.json
scripts/: build.mjs  detect-msvc.ps1  msvc-build.ps1  run-command.mjs  unit-test-asan.mjs  unit-test.mjs  unit-test.ps1
src/: common.h  pch.h  server.h  tcp_server.cpp  tcp_server.h
src/proxypp/: class_utils.h  common.h  error.cpp  error.h  helper.h  json.cpp  json.h  pch.h  result.h
src/proxypp/core/: tcp_server.cpp  tcp_server.h
src/proxypp/helper/: cli_helper.cpp  cli_helper.h  file_helper.cpp  file_helper.h  json_helper.cpp  json_helper.h  json_schema_helper.cpp  json_schema_helper.h
src/proxypp/http/: body_info.cpp  body_info.h  http_message_utils.cpp  http_message_utils.h  http_proxy_session.cpp  http_proxy_session.h
src/proxypp/http/adapter/: beast_request_adapter.cpp  beast_request_adapter.h  beast_response_adapter.cpp  beast_response_adapter.h
src/proxypp/log/: log.cpp  log.h
src/proxypp/rule/: config.cpp  config.h  error.cpp  error.h  match.cpp  match.h  match_context.cpp  match_context.h  op.cpp  op.h  rule_engine.cpp  rule_engine.h  rule_file.cpp  rule_file.h  schema_validator.cpp  schema_validator.h
src/proxypp/rule/detail/: match_context_impl.h
src/proxypp/rule/http/: action_executor.cpp  action_executor.h  adapter_share.h  apply.cpp  apply.h  context_injector.cpp  context_injector.h  model.cpp  model.h  request_adapter.h  response_adapter.h
src/proxypp/script/: js_runtime.cpp  js_runtime.h  qjs.h
src/proxypp/script/qjs/: context.cpp  context.h  cstring.cpp  cstring.h  error.cpp  error.h  evaluator.cpp  evaluator.h  object_builder.cpp  object_builder.h  runtime.cpp  runtime.h  value.cpp  value.h
src/proxypp/script/qjs/detail/: exception_message.cpp  exception_message.h  value_access.h
tests/: CMakeLists.txt  qjs_fixture.cpp  qjs_fixture.h  qjs_test_helper.h  test_boost_url.cpp  test_demo.cpp  test_helper.h  test_helper_cli.cpp  test_helper_file.cpp  test_helper_json.cpp  test_helper_json_schema.cpp  test_http_beast_adapter_helper.h  test_http_beast_request_adapter.cpp  test_http_beast_response_adapter.cpp  test_http_body_info.cpp  test_http_message_utils.cpp  test_json.cpp  test_qjs_api.cpp  test_qjs_context.cpp  test_qjs_evaluator.cpp  test_qjs_object_builder.cpp  test_qjs_runtime.cpp  test_qjs_value.cpp  test_rule_config.cpp  test_rule_engine.cpp  test_rule_global_config.cpp  test_rule_http_action_executor.cpp  test_rule_http_apply.cpp  test_rule_http_context_injector.cpp  test_rule_http_model.cpp  test_rule_load_file.cpp  test_rule_match.cpp  test_rule_match_context.cpp  test_rule_op.cpp  test_rule_schema_validation.cpp  test_rule_schema_validator.cpp
